# LumiSync

./: .gitattributes  .gitignore  LICENSE  LumiSync.py  README.md  pyproject.toml  requirements.txt  run_dev.bat  run_dev.py  setup_dev.bat  setup_dev.sh
.github/: FUNDING.yml
.github/workflows/: PyPi.yaml  ci.yaml  linux-release.yaml  pypi.yaml  windows-release.yaml
assets/brand/: README.md
docs/: govee-desktop-capability-research.md  govee-lan-research-and-implementation.md  idotmatrix-ble-research.md  lsc-tuya-research.md
lumisync/: __main__.py  connection.py  devices.py  groups.py  led_mapping.py  lumisync.py  sku_catalog.py  updates.py  utils.py
lumisync/config/: options.py  presets.toml
lumisync/drivers/: __init__.py  base.py  govee_lan.py  idotmatrix_ble.py  pool.py  registry.py  tuya_lan.py
lumisync/gui/: __init__.py  app.py  base.py  main_window.py  styles.py
lumisync/gui/controllers/: __init__.py  device_controller.py  sync_controller.py  update_controller.py
lumisync/gui/dialogs/: __init__.py  add_device_dialog.py  settings_dialog.py
lumisync/gui/resources/: __init__.py  icons.py
lumisync/gui/theme/: __init__.py  dark.qss  tokens.py
lumisync/gui/utils/: __init__.py  animations.py  autostart.py  flow_layout.py  single_instance.py  validators.py  window_effects.py
lumisync/gui/views/: __init__.py  color_tab.py  devices_tab.py  devices_view.py  draw_view.py  modes_tab.py  modes_view.py  settings_page.py
lumisync/gui/widgets/: __init__.py  active_sync_row.py  device_card.py  device_chip.py  device_inspector.py  led_mapping_widget.py  navigation_shell.py  pixel_canvas.py  product_controls.py  toast.py
lumisync/modes/: MusicSync.py
lumisync/sync/: artwork.py  audio.py  monitor.py  music.py  processing.py  system_volume.py
lumisync/utils/: GetData.py  SendData.py  __init__.py  colors.py  file_operations.py  logging.py
modes/: MonitorSync.py  MusicSync.py
packaging/flatpak/: README.md  io.github.Minlor.LumiSync.yaml
packaging/linux/: AppRun  lumisync.desktop
packaging/pyinstaller/: lumisync_onedir.spec  lumisync_onefile.spec
tests/: cli_smoke.py  color_test.py  import_check.py  lights_go_brr(epilepsy warning).py  random_multicolor_test.py  test_artwork.py  test_audio.py  test_autostart.py  test_color.py  test_connection_status.py  test_device_discovery.py  test_device_ui_state.py  test_discovery_sweep.py  test_drivers.py  test_groups.py  test_lan_helpers.py  test_multicolor.py  test_music_auto_ui.py  test_power_offline.py  test_power_toggle.py  test_processing.py  test_product_interactions.py  test_release_packaging.py  test_segment_counts.py  test_sku_catalog.py  test_system_volume.py  test_transition.py  test_updates.py  test_window_effects.py  test_window_material.py  test_windows_packaging.py  transition_test.py
tools/: build_linux.sh  build_windows.ps1  capture_readme_screenshots.py  generate_brand_assets.py  govee_ui_capture.ps1
utils/: CheckRequirements.py  GetData.py  GetDevices.py  SendData.py
website/: .gitignore  README.md  astro.config.mjs  package-lock.json  package.json  wrangler.jsonc
website/app/: globals.css  page.tsx
website/public/: 404.html
website/src/pages/: index.astro
website/tests/: rendered-html.test.mjs
