[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lumisync"
dynamic = ["version"]
license = "MIT"
license-files = ["LICENSE"]
description = "A desktop app for syncing smart lights and pixel displays with screen and audio content."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Natural Language :: English",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "colorama>=0.4.6",
  "dxcam>=0.3.0",
  "numpy>=2.2.4",
  "packaging>=24.0",
  "pillow>=11.1.0",
  "soundcard>=0.4.5",
  "webcolors>=24.11.1",
  "PySide6>=6.6.0",
  # Device transports — bundled so every install controls every supported
  # device family out of the box (no optional extras to remember).
  "bleak>=0.22.0",       # iDotMatrix pixel panels (Bluetooth LE)
  "tinytuya>=1.13.0",    # LSC / Tuya WiFi lights (local protocol)
  "opencv-python-headless>=4.10.0; sys_platform == 'win32'",
  "pycaw>=20230407; sys_platform == 'win32'",  # read master volume to cancel it in music sync
  "pywin32>=310; sys_platform == 'win32'",
  "winrt-Windows-Media-Control>=3.2.1; sys_platform == 'win32'",
  "winrt-Windows-Storage-Streams>=3.2.1; sys_platform == 'win32'",
  "mss>=10.1.0; sys_platform != 'win32'",
]

[tool.ruff]
target-version = "py311"

[tool.setuptools.packages.find]
include = ["lumisync*"]

[tool.setuptools.package-data]
"lumisync.gui.resources" = ["icons/*.svg", "icons/*.png", "icons/*.ico"]
"lumisync.gui.theme" = ["*.qss"]
"lumisync.config" = ["*.toml"]

[tool.setuptools.dynamic]
version = { attr = "lumisync.__version__" }

[project.urls]
repository = "https://github.com/Minlor/LumiSync.git"

[project.scripts]
lumisync = "lumisync.lumisync:main"
